<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/ic_book"
        android:title="@string/browse_nav_btn" />
    <item
        android:id="@+id/SearchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search_nav_btn" />
    <item
        android:id="@+id/PostFragment"
        android:icon="@drawable/ic_post"
        android:title="@string/post_nav_btn" />
    <item
        android:id="@+id/AllChatFragment"
        android:icon="@drawable/ic_chat"
        android:title="Chat" />
    <item
        android:id="@+id/ProfileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_nav_btn" />
</menu>