<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BookFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/naruto" />

            <TextView
                android:id="@+id/userID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/font"
                android:text="@string/post_by_user"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/bookNameTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font"
                android:text="@string/book_name_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/font"
                android:text="@string/book_name"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                 />
            <TextView
                android:id="@+id/bookAuthorTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:fontFamily="@font/font"
                android:text="@string/author_name_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:fontFamily="@font/font"
                android:text="@string/author_name"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/bookDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:fontFamily="@font/font"
                android:text="@string/detail"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/bookDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/font"
                android:text="@string/synopsis"
                android:textSize="16sp"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/borrow_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorLoginBut"
            android:fontFamily="@font/font"
            android:padding="12dp"
            android:text="@string/borrow_btn"
            android:textColor="@color/colorWhiteText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cornerRadius="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>