<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResetPasswordFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:padding="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/previous" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="16dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/font"
            android:text="@string/forgot_password_text"
            android:textAlignment="center"
            android:textColor="@color/colorLoginBut"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font"
            android:text="@string/text_about_change_password"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userID_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"

            app:errorEnabled="true"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userID_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetpassword_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/colorLoginBut"
            android:fontFamily="@font/font"
            android:text="@string/change_password_btn"
            android:textColor="@color/colorWhiteText"
            android:textSize="18sp"

            app:cornerRadius="20dp">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</FrameLayout>

