<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:padding="12dp"
        android:src="@drawable/previous" />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/font"
                android:text="@string/register_text"
                android:textAlignment="center"
                android:textColor="@color/colorLoginBut"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userID_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                app:boxCornerRadiusBottomEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusTopStart="32dp"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userID_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                app:boxCornerRadiusBottomEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusTopStart="32dp"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:boxCornerRadiusBottomEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusTopStart="32dp"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirm_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                app:boxCornerRadiusBottomEnd="32dp"
                app:boxCornerRadiusBottomStart="32dp"
                app:boxCornerRadiusTopEnd="32dp"
                app:boxCornerRadiusTopStart="32dp"
                app:boxStrokeWidth="2dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_confirm_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/colorLoginBut"
                android:fontFamily="@font/font"
                android:text="@string/register_btn_text"
                android:textColor="@color/colorWhiteText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="23dp">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>